# RDM

./: .gitignore  LICENSE  README.md  THIRD_PARTY.md  pyproject.toml  reproduce.py  requirements.txt
.github/workflows/: ci.yml
assets/: README.md  pickapic_test_prompts.jsonl
configs/: ablation_constrained.yaml  ablation_distance.yaml  base.yaml  eval_flux.yaml  eval_flux_pspa.yaml  eval_imagenet.yaml  flux.yaml  flux_geall.yaml  imagenet.yaml  panel.yaml  toy_batch.yaml  toy_spiral.yaml
docs/: README.md  evaluating_released_checkpoints.md  flux_geall_assets.md  flux_reference.md  geneval_protocol.md  method_notes.md  reproduction_map.md
rdm/: __init__.py
rdm/compare/: __init__.py  drifting.py  frechet.py  grad_balance.py  interface.py  kernels.py  median_heuristic.py  mmd_exact.py  mmd_nystrom.py  mmd_rff.py  nystrom.py  reference_math.py  sliced_wasserstein.py
rdm/data/: __init__.py  coco.py  flux_gen_driver.py  imagenet.py  prompts.py
rdm/eval/: __init__.py  flux_eval.py  geneval_harness.py  imagenet_eval.py  mmd_r14.py  panel.py  pickscore_eval.py  report.py  sw_r14.py
rdm/figures/: __init__.py  make_figures.py
rdm/refprep/: __init__.py  build_eval_reference.py  build_joint_reference.py  run.py  (+3 more)
scripts/: build_flux2_ctx.py  check_artifacts.py  download_checkpoints.py  prepare_datasets.py  run_refprep.sh  train.sh
tests/: test_eval_harness.py  test_flux_eval_wiring.py  test_generators.py  test_kernel_math.py  test_offobjective_floor.py  test_panel_split.py  test_paper_fixtures.py  test_refprep.py  test_representation.py  test_toy.py  test_train.py
(+44 files in other folders)
